--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Catalyst-Controller-SOAP
-version:      0.0.4
+version:      0.0.5
 version_from: lib/Catalyst/Controller/SOAP.pm
 installdirs:  site
 requires:
-    Catalyst::Controller:          0
+    Catalyst::Runtime:             5.7011
     XML::LibXML:                   0
 
 distribution_type: module
