--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Catalyst-Controller-SOAP
-version:      0.2.0
+version:      0.3
 version_from: lib/Catalyst/Controller/SOAP.pm
 installdirs:  site
 requires:
     Catalyst::Runtime:             5.7011
+    XML::Compile::SOAP:            0
     XML::LibXML:                   0
 
 distribution_type: module
