Import of DRUOSO/Catalyst-Controller-SOAP-1.11.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Controller-SOAP
gitpan-cpan-version:      1.11
gitpan-cpan-path:         DRUOSO/Catalyst-Controller-SOAP-1.11.tar.gz
gitpan-cpan-author:       DRUOSO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Catalyst-Controller-SOAP
-version:      1.10
-version_from: lib/Catalyst/Controller/SOAP.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Catalyst-Controller-SOAP
+version:             1.11
+abstract:            Catalyst SOAP Controller
+license:             ~
+author:              
+    - Daniel Ruoso <daniel@ruoso.com>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Catalyst::Runtime:             5.7011
     XML::Compile::SOAP:            0
     XML::LibXML:                   0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
