--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Catalyst-Controller-SOAP
-version:             1.11
+version:             1.12
 abstract:            Catalyst SOAP Controller
 license:             ~
 author:              
@@ -9,7 +9,10 @@ generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Catalyst::Runtime:             5.7011
+    Class::C3:                     0
     XML::Compile::SOAP:            0
+    XML::Compile::SOAP11:          0
+    XML::Compile::WSDL11:          0
     XML::LibXML:                   0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
