Import of DRUOSO/Catalyst-Controller-SOAP-1.20.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Controller-SOAP
gitpan-cpan-version:      1.20
gitpan-cpan-path:         DRUOSO/Catalyst-Controller-SOAP-1.20.tar.gz
gitpan-cpan-author:       DRUOSO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Catalyst-Controller-SOAP
-version:             1.19
+version:             1.20
 abstract:            Catalyst SOAP Controller
 license:             ~
 author:              
@@ -9,7 +9,7 @@ generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Catalyst::Runtime:             5.7011
-    Class::C3:                     0
+    MRO::Compat:                   0
     XML::Compile::SOAP:            2.03
     XML::LibXML:                   0
 meta-spec:
