--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,26 @@
 --- #YAML:1.0
-name:                Catalyst-Controller-SOAP
-version:             1.20
-abstract:            Catalyst SOAP Controller
-license:             ~
-author:              
+name:               Catalyst-Controller-SOAP
+version:            1.21
+abstract:           Catalyst SOAP Controller
+author:
     - Daniel Ruoso <daniel@ruoso.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Catalyst::Runtime:             5.7011
-    MRO::Compat:                   0
-    XML::Compile::SOAP:            2.03
-    XML::LibXML:                   0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Catalyst::Runtime:   5.7011
+    Moose:               0.9
+    MRO::Compat:         0
+    XML::Compile::SOAP:  2.03
+    XML::LibXML:         0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
